# unicode-transforms

./: .gitignore  .packcheck.ignore  .travis.yml  Changelog.md  LICENSE  MAINTAINING.md  NOTES.md  README.md  appveyor.yml  cabal.project  download-ucd-files.sh  hpack.yaml  package.yaml  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.2.yaml  stack.yaml  ucd.sh  unicode-transforms.cabal
.github/workflows/: packcheck.yml  s390x.yml
Data/ByteString/UTF8/: Normalize.hs
Data/String/: Normalize.hs
Data/Test/: StreamUnstream.hs
Data/Text/: Normalize.hs  NormalizeNative.dump-asm  NormalizeNative.dump-cmm  NormalizeNative.dump-simpl  NormalizeNative.dump-stg  NormalizeNative.hs  NormalizeUTF8Proc.hs
Data/Unicode/: Normalize.hs  Transform.hsc  Types.hs  UTF8Proc.hsc
Data/Unicode/Internal/: BitArray.hs  Bits.hs  Division.hs  Normalization.hs  NormalizeStream.hs
Data/Unicode/Internal/Char/: DerivedNormalizationProperties.hs
Data/Unicode/Properties/: BitArray.hs  CombiningClass.hs  Compositions.hs  CompositionsK.hs  DecompD.hs  Decomposable.hs  DecomposableK.hs  Decompose.hs  DecomposeHangul.hs  Decompositions.hs  DecompositionsK.hs  DecompositionsK2.hs
GHC_PERF_ISSUE/: GDB_TRACE.txt  README.txt  decompose-loop-execution-trace-ghc-7.10.3.asm  decompose-loop-execution-trace-ghc-8.0.1.asm  decompose-loop-execution-trace-llvm.asm  decompose-loop-execution-trace.cmm  decompose-loop-full.cmm  dump-command.sh
benchmark/: Benchmark.hs  Chart.hs  NormalizeFile.hs  README.md
test/: ConformanceTest.hs  Extra.hs  NormalizationTest.hs  Properties.hs  QuickCheckUtils.hs
ucd2haskell/: CHANGELOG.md  LICENSE  Main.hs  ucd2haskell.cabal
ucd2haskell/Parser/: Text.hs
unicode-data/: README.md  UCD2Haskell.hs  stack.yaml  ucd2haskell.cabal
unicode-data/extra/: NormalizationTest.txt
utf8proc/Data/Unicode/: UTF8Proc.hsc
utf8proc/cbits/: utf8proc.c  utf8proc.h
