name:                unicode-transforms
version:             0.1.0.0
synopsis:            Unicode transforms (normalization, casefolding etc.)
description:
  This is a lightweight library supporting a limited set of unicode
  transformations (only normalizations as of now) on ByteStrings (UTF-8) and
  Text without requiring any other system libraries. It is based on
  the utf8proc C utility.
  .
  text-icu is a full featured alternative for all unicode operations but with
  a dependency on the system installed icu libraries. This package aims to
  provide an API similar to text-icu.
  .
  For more details see the README.md file.

homepage:            http://github.com/harendra-kumar/unicode-transforms
license:             BSD3
license-file:        LICENSE
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2016 Harendra Kumar
category:            Data,Text,Unicode
stability:           Experimental

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

flag native
  description: Use the native haskell implementation
  default: False
  manual: True

library
  default-language:    Haskell98
  ghc-options:         -Wall
                       -fwarn-identities
                       -fwarn-incomplete-record-updates
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs
                       -funbox-strict-fields
                       -O2

  cc-options:          -Wall

  exposed-modules:     Data.Text.NormalizeNative
                       Data.Unicode.Normalize
                       Data.Test.StreamUnstream
  other-modules:
                       Data.Unicode.Transform

  build-depends:        base >= 4 && < 5
                      , text

  include-dirs:        cbits
  c-sources:           cbits/utf8proc.c

Benchmark bench
  default-language:    Haskell98
  ghc-options:         -O2
                       -Wall
                       -fwarn-identities
                       -fwarn-incomplete-record-updates
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs
                       -funbox-strict-fields

  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Benchmark.hs
  build-depends:         base >= 4 && < 5
                       , criterion
                       , deepseq
                       , filepath
                       , optparse-applicative
                       , path
                       , path-io
                       , text
                       , text-icu
                       , unicode-transforms

source-repository head
  type:     git
  location: https://github.com/harendra-kumar/unicode-transforms
