name:                unicode-transforms
version:             0.1.0.0
synopsis:            Unicode transforms (normalization, casefolding etc.)
description:
  This is a lightweight library supporting a limited set of unicode
  transformations (only normalizations as of now) on ByteStrings (UTF-8) and
  Text without requiring any other system libraries. It is based on
  the utf8proc C utility.
  .
  text-icu is a full featured alternative for all unicode operations but with
  a dependency on the system installed icu libraries. This package aims to
  provide an API similar to text-icu.
  .
  For more details see the README.md file.

homepage:            http://github.com/harendra-kumar/unicode-transforms
license:             BSD3
license-file:        LICENSE
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2016 Harendra Kumar
category:            Data,Text,Unicode
stability:           Experimental

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  cbits/utf8proc.h
  cbits/utf8proc_data.h
  cbits/XQillaExport.hpp
  stack.yaml

library
  default-language:    Haskell98
  ghc-options:         -Wall
                       -fwarn-identities
                       -fwarn-incomplete-record-updates
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs

  cc-options:          -Wall

  exposed-modules:     Data.ByteString.UTF8.Normalize
                       Data.Text.Normalize
                       Data.Unicode.Types
  other-modules:
                       Data.Unicode.UTF8Proc

  build-depends:        base >= 4 && < 5
                      , bytestring
                      , text

  include-dirs:        cbits
  c-sources:           cbits/utf8proc.c

test-suite test
  default-language:    Haskell98
  ghc-options:         -Wall
                       -fwarn-identities
                       -fwarn-incomplete-record-updates
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test
  main-is:             NormalizationTest.hs
  build-depends:         base >= 4 && < 5
                       , split
                       , text
                       , unicode-transforms

Benchmark bench
  default-language:    Haskell98
  ghc-options:         -Wall
                       -fwarn-identities
                       -fwarn-incomplete-record-updates
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  main-is:             Benchmark.hs
  build-depends:         base >= 4 && < 5
                       , criterion
                       , deepseq
                       , filepath
                       , path
                       , path-io
                       , text
                       , text-icu
                       , unicode-transforms

source-repository head
  type:     git
  location: https://github.com/harendra-kumar/unicode-transforms
